--- a/registro.html
+++ b/registro.html
@@ -4,20 +4,38 @@
         <Title>Registro</Title>
     </head>
     <body>
-        <ul>
-           <form action="verificacion.php" method="post">
-            Nombre: <input type="text" name="nombre">
-            Password: <input type="password" name="pass">
-            </form> 
-            <input type="submit" value="Ingresar">
-            <input type="reset" value="Borrar">
-            <li>
-                           <a href="#">Olvide mi clave</a>
-                       </li>
-                       <li>
-                           <a href="#">Registrarme</a>
-                       </li>
-        </ul>
+        <div class="Ingreso">
+            <tr>
+                <td>
+                    <label for="email">E-mail</label>
+                </td>
+                <td>
+                    <div>
+                        <input name="email" type="text"/>
+                    </div>
+                 </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="pass">Contraseña</label>
+                </td>
+                <td>
+                    <div>
+                        <input name="pass" type="password"/>
+                    </div>
+                 </td>
+            </tr>
+            <div>
+                <from method="get" action="">
+                    <input type="submit" value="Ingresar"/>
+                    <input type="reset" value="Borrar"/>
+                </from>
+            </div>
+            <div>
+                <a href="#">Olvide mi clave</a>
+                <a href="#">Registrarme</a>
+            </div>
+        </div>
         
     </body>
 </html>
