--- a/Quienessomos.html
+++ b/Quienessomos.html
@@ -68,7 +68,7 @@
 
     <li><a href="#">
         
-         El precio del menú es de 12 soles, el cual ya incluye el costo por la entrega. El pago se hace en 
+         El precio del menú es de 12 soles, el cual ya incluye el costo por la entrega. El pago se hace en efectivo a la hora de entrega o con deposito a una cuenta bancaria que te  rindaremos. Tambien damos créditos para empresas previa coordinacion.
 
     </a></li>
         
